[gd_scene load_steps=9 format=3 uid="uid://cxiikvq5sd0os"]

[ext_resource type="Script" path="res://engine/card_game/stubs/p_card_stub.gd" id="1_jbetc"]
[ext_resource type="Texture2D" uid="uid://b2bd2q7sk18lw" path="res://engine/common/assets/Red_Icons/PNG/4.png" id="2_kiiq3"]
[ext_resource type="Script" path="res://engine/common/tools/regular_polygon.gd" id="3_aw3h7"]
[ext_resource type="Script" path="res://engine/card_game/Area2DTest.gd" id="4_bi5pn"]

[sub_resource type="Animation" id="Animation_4t0uy"]
resource_name = "tremble_1"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0, 0.05, -0.05, 0, 0.05, 0, -0.03, -0.05, 0, 0.05, 0, 0.01, -0.05, 0, 0.05, 0, 0, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42k6j"]
_data = {
"tremble_1": SubResource("Animation_4t0uy")
}

[sub_resource type="Theme" id="Theme_ni6wk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_udylo"]
radius = 73.0616

[node name="CardStub" type="Node2D"]
script = ExtResource("1_jbetc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_42k6j")
}
speed_scale = 3.0

[node name="HoverBorder" type="ColorRect" parent="."]
visible = false
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
mouse_filter = 2
color = Color(0.329412, 0.933333, 0.184314, 1)

[node name="BG" type="ColorRect" parent="."]
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ImgMask" type="ColorRect" parent="."]
clip_children = 1
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
mouse_filter = 2
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="ArtImg" type="Sprite2D" parent="ImgMask"]
position = Vector2(84.625, 86.5)
texture = ExtResource("2_kiiq3")

[node name="ValueLabelPoly" type="Polygon2D" parent="."]
position = Vector2(59, -60)
rotation = -0.785398
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(30, 0, 1.83691e-15, 30, -30, 3.67382e-15, -5.51073e-15, -30, 30, 0)
script = ExtResource("3_aw3h7")
sides = 4
radius = 30.0

[node name="ValueLabel" type="RichTextLabel" parent="ValueLabelPoly"]
offset_left = -0.707117
offset_top = -30.4056
offset_right = 43.2929
offset_bottom = 9.59441
rotation = 0.785398
theme = SubResource("Theme_ni6wk")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]1-3[/center]"

[node name="EnergyCostPoly" type="Polygon2D" parent="."]
position = Vector2(66, 67)
rotation = 0.785398
color = Color(0.329412, 0.933333, 0.184314, 1)
polygon = PackedVector2Array(18, 0, 1.10215e-15, 18, -18, 2.20429e-15, -3.30644e-15, -18, 18, 0)
script = ExtResource("3_aw3h7")
sides = 4
radius = 18.0

[node name="CostLabel" type="RichTextLabel" parent="EnergyCostPoly"]
offset_left = -26.163
offset_top = 2.12132
offset_right = 15.837
offset_bottom = 42.1213
rotation = -0.785398
theme = SubResource("Theme_ni6wk")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]1[/center]"

[node name="Area2D" type="Area2D" parent="."]
z_index = 100
script = ExtResource("4_bi5pn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_udylo")

[node name="Arrows" type="Node2D" parent="."]

[node name="InstantArrows" type="Node2D" parent="Arrows"]
unique_name_in_owner = true

[node name="ResolveArrows" type="Node2D" parent="Arrows"]
unique_name_in_owner = true

[node name="ResolveSecondaryArrows" type="Node2D" parent="Arrows"]
unique_name_in_owner = true

[node name="StatusMask" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -100.0
offset_top = -88.0
offset_right = 101.0
offset_bottom = 87.0
mouse_filter = 2
color = Color(1, 1, 1, 0.207843)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_area_exited"]
